# tamp-xarm

./: .gitignore  .gitmodules  README.md
docker/docker_hsr/: Dockerfile  build.sh  hsrrc  run.sh  sudo
docker/docker_isaac/: Dockerfile  beta.dockerfile  build.sh  build_beta.sh  build_dev.sh  dev.dockerfile  run.sh  run_beta.sh  run_dev.sh
docker/docker_openrave/: Dockerfile  build.sh  entrypoint.sh  exec_openrave.sh  run.sh  wrapper.xml
docker/docker_xarm/: Dockerfile  build.sh  config  entrypoint.sh  run.sh
xarm_rl/: extension.py
xarm_rl/apps/: omni.isaac.sim.python.gym.camera.kit
xarm_rl/cfg/: config.yaml
xarm_rl/cfg/task/: xArmFMBAssembly.yaml  xArmFMBInsert.yaml  xArmFMBMOMOCameraReach.yaml  xArmFMBMOMOInsert.yaml  xArmFMBMOMOPick.yaml  xArmFMBMOMOPlace.yaml  xArmFMBMOMOReach.yaml  xArmFMBPick.yaml  xArmFMBPlace.yaml
xarm_rl/cfg/train/: xArmFMBInsertPPO.yaml  xArmFMBMOMOCameraReachPPO.yaml  xArmFMBMOMOInsertPPO.yaml  xArmFMBMOMOPickPPO.yaml  xArmFMBMOMOPlacePPO.yaml  xArmFMBMOMOReachPPO.yaml  xArmFMBPickPPO.yaml  xArmFMBPlacePPO.yaml
xarm_rl/envs/: isaac_env_rlgames.py  isaac_env_rlgames_mt.py
xarm_rl/robots/articulations/: xarm.py
xarm_rl/scripts/: train_rlgames.py
xarm_rl/utils/: dataset_utils.py  files.py  task_utils.py
xarm_tamp/experiments/: tamp_planner.py
xarm_tamp/pddlstream/: utils.py
xarm_tamp/tampkit/: tamp_planner.py
xarm_tamp/tampkit/models/hsrb_parts_description/: package.xml
xarm_tamp/tampkit/models/hsrb_parts_description/urdf/sensors/: asus_xtion.urdf.xacro  pointgrey_chameleon.urdf.xacro  wide_camera.urdf.xacro
(+464 files in other folders)
